# TS2CG1.2

./: .gitignore  CMakeLists.txt  MANIFEST.in  PCG  PLM  README.md  SOL  User_Manual.docx  compile.sh  pyproject.toml  setup.py
TS2CG/: PCG  PLM  PointUpdaterClass.py  SOL  __init__.py  run_modules.py  run_modules_backup.py  wrapper.py
TS2CG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
TS2CG/MembraneBuilder/: Argument.cpp  Argument.h  BackMap.cpp  Data_Structure.h  GenerateMolType.h  PCG.cpp  PointBasedBlueprint.cpp  PointBasedBlueprint.h  SHGeneric1DPBCPointMaker.cpp  Wall.cpp  help.cpp
TS2CG/PointUpdater/: domain_input_c1_c2.txt  initialize_Point.py  point.py
TS2CG/PointUpdaterClass/: Point.py  PointUpdaterClass.py  domain_input.txt  point.py
TS2CG/Pointillism/: CMakeLists.txt  Curvature.cpp  In_OR_Out.cpp  In_OR_Out.h  Traj_XXX.cpp  help.cpp
TS2CG/Solvate/: CMakeLists.txt  Def.h  Solvate.cpp  bead.cpp
TS2CG/core/: __init__.py  point.py
TS2CG/cpp/: __init__.py  base.py  modules.py
TS2CG/tools/: __init__.py  circular_domains.py  dir_visualizer.py  domain_placer.py  domain_placer_backup.py  inclusion_updater.py
Tutorials/files/: ts2vmd.tcl
Tutorials/protein_flatsys/: Wall.itp  flat.str  run.sh  system.gro  system.top
Tutorials/tut1/: input.str  run_tut1.sh
Tutorials/tut2/: input.str  run_tut2.sh
Tutorials/tut3/: Sphere.tsi  Sphere_2.tsi  input.str  run_tut3_1.sh  run_tut3_2.sh
Tutorials/tut4/: P1.gro  P2.gro  Sphere.tsi  input.str  run_tut4.sh
Tutorials/tut5/: Sphere.tsi  (+4 more)
src/: PCG  PCG_map.pptx  PLM  PLM_map.pptx
(+197 files in other folders)
