[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.10"]
build-backend = "setuptools.build_meta"

[project]
name = "TS2CG"
version = "1.2.0"
description = "A Python wrapper for TS2CG C++ code"
requires-python = ">=3.6"

[tool.setuptools]
packages = ["TS2CG"]

[project.scripts]
TS2CG = "TS2CG.wrapper:main"
