[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.10"]
build-backend = "setuptools.build_meta"

[project]
name = "TS2CG"
version = "1.2.2"
description = "TS2CG: converts triangulated surfaces to coarse-grained membrane models"
requires-python = ">=3.6"
authors = [
    {name = "Weria Pezeshkian", email = "weria.pezeshkian@nbi.ku.dk"},
    {name = "Jan Stevens", email = "j.a.stevens@rug.nl"},
]
license = {file = "LICENSE"}
dependencies = ["numpy"]

[tool.setuptools]
packages = ["TS2CG"]

[project.scripts]
TS2CG = "TS2CG.wrapper:main"
